# haskell-katas

./: LICENSE  Main.hs  README.md  default.nix  haskell-katas.cabal  hie.yaml  kata.cabal  katas.cabal  shell.nix
.github/workflows/: test.yml
exe/: Main.hs
test/: AnagramDistanceSpec.hs  BalancedParensSpec.hs  BinaryTreeSpec.hs  BinaryTreeTraversalSpec.hs  BurrowsWheelerTransformSpec.hs  CapitalizeSpec.hs  ChurchBoolSpec.hs  CombsSpec.hs  DecodeMorseBitsSpec.hs  DecodeMorseSpec.hs  DescendingOrderSpec.hs  DirectionReduceSpec.hs  EditDistanceSpec.hs  FirstNonConsecutiveSpec.hs  FoldFuncsSpec.hs  FoldMapSpec.hs  ListFuncsSpec.hs  NextBiggerSpec.hs  PascalsTriangleSpec.hs  ScrambliesSpec.hs  SumOfParts.hs
