cabal-version:         3.0

name:                  katas
version:               0.1.0.0
author:                Al Skipp
maintainer:            al_skipp@fastmail.fm
copyright:             2020 Al Skipp
category:              Katas
build-type:            Simple

test-suite katas-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Widentities
  build-depends:       base ^>=4.13.0.0
                     , containers
                     , split
                     , hspec == 2.*
                     , QuickCheck == 2.*
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CapitalizeSpec
                     , DescendingOrderSpec
                     , CombsSpec
                     , FirstNonConsecutiveSpec
                     , ScrambliesSpec
                     , SumOfParts
                     , DirectionReduceSpec
                     , ChurchBoolSpec
                     , BinaryTreeTraversalSpec
                     , FoldMapSpec
                     , NextBiggerSpec
                     , BalancedParensSpec
                     , BurrowsWheelerTransformSpec
                     , DecodeMorseSpec
                     , DecodeMorseBitsSpec
                     , PascalsTriangleSpec
